alterações na pagina sobre

--- a/assets/style.css
+++ b/assets/style.css
@@ -85,7 +85,7 @@ p {
   top: 0;
   left: 0;
   padding: 20px 0;
-  background: #e3e6f3;
+  background: #e3e6f3ab;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
   z-index: 999;
 }
